[gd_scene load_steps=5 format=2]

[ext_resource path="res://code/arrow.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, -70, -20, -45, -10, -48, -12, 13, 0, 0, 12, 13, 10, -48, 20, -45 )

[node name="head" type="Polygon2D"]
z_index = 1
color = Color( 0.435294, 0.0823529, 0.0823529, 0.705882 )
antialiased = true
polygon = PoolVector2Array( 0, -70, -20, -45, -10, -48, -12, 13, 0, 0, 12, 13, 10, -48, 20, -45 )
script = ExtResource( 1 )

[node name="start" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
shape_centered = false

[node name="end" type="TouchScreenButton" parent="."]
position = Vector2( 0, -50 )
shape = SubResource( 2 )
shape_centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="used_to_delete" type="TouchScreenButton" parent="."]
shape = SubResource( 3 )
shape_centered = false

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="released" from="start" to="." method="_on_start_released"]
[connection signal="pressed" from="end" to="." method="_on_end_pressed"]
[connection signal="released" from="end" to="." method="_on_end_released"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="used_to_delete" to="." method="_on_used_to_delete_pressed"]
[connection signal="released" from="used_to_delete" to="." method="_on_used_to_delete_released"]
